Fixed intelliJ inspections